# Space_Coverage_Robot

./: .gitignore  README.txt  log
param_temp/: costmap_common.yaml  costmap_global.yaml  planner_local.yaml
src/: README.txt
src/GEMS_models/: readme.txt
src/estop/: CMakeLists.txt  package.xml
src/estop/launch/: rndw_bringup_sbot_lrf.launch  rndw_bringup_sbot_sonars.launch  rndw_bringup_tbot_lrf.launch  rndw_bringup_tbot_sonars.launch  rndw_tsbot_lrf.launch  rndw_tsbot_sonars.launch
src/estop/src/: emergency_stop.cpp
src/p3dx_description/launch/: p3dx_description.launch  rviz_p3dx.launch  rviz_p3dx_ugv1.launch
src/p3dx_description/urdf/: pioneer3dx_fixed_joints.xml
src/robot/: CMakeLists.txt  package.xml
src/robot/launch/: hokuyo_LRF.launch  mynteye_stereo_camera.launch  orbbec_astra_camera.launch  platform.launch  robot.launch  sensors.launch
src/space_coverage/: CMakeLists.txt  package.xml
src/space_coverage/Modules/: amcl.launch  gmapping.launch  joy.launch  space_coverage_planner.launch
src/space_coverage/Modules/move_base/: move_base.launch
src/space_coverage/Modules/move_base/param/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  planner_global.yaml  planner_local.yaml
src/space_coverage/launch/: amcl.launch  bringup.launch  move_base.launch  museum_small.launch  office.launch  robot_slam.launch  robot_space_coverage.launch  robot_spc.launch  space_coverage_robot.launch  stage_building.launch  stage_corridor.launch  stage_corridor_slam.launch  stage_small_building.launch  stage_small_building_slam.launch  test_space_coverage_planner.launch
src/space_coverage/launch/Old/: stage_building.launch
src/space_coverage/maps/isr_sea1/: map.pgm
src/space_coverage/maps/isr_sea2/: map.pgm  map.yaml
src/space_coverage/maps/isr_sea3/: map.pgm  map.yaml
src/space_coverage/maps/isr_sea4/: map.pgm  map.yaml
src/space_coverage/param/: costmap_common_params_waffle.yaml  dwa_local_planner_params_waffle.yaml
src/space_coverage/param/stage/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_local_planner_params.yaml  stage_costmap_common_params.yaml
src/space_coverage/src/: SC_planner.cpp  SC_planner.hpp  space_coverage_planner.cpp
src/space_coverage/world/: office_save_0.wolrd  office_save_1  office_save_2  readme.txt
src/space_coverage/world/Stage/: building.inc  lab1.inc  pioneer_building.world  pioneer_lab1.world  pioneer_small_building.world  small_building.inc
src/space_coverage/world/Stage/building/: building.yaml  small_building.yaml  small_building_robot.pgm  small_building_robot.yaml
src/space_coverage/world/Stage/corridor/: map.inc  map.yaml  pioneer.world
src/space_coverage/world/Stage/corridor/old/: map.yaml
src/space_coverage/world/Stage/lab1/: lab1.pgm  lab1.yaml
src/space_coverage/world/rviz/: isr_sea1.rviz  robot.rviz  small_building.rviz  small_building_slam.rviz
src/turtlebot3_description/urdf/: turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro
